# esp-Ai-digicam

./: README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  jarvis.h  main.c
